Update 'go-app-0502' component image to: quay.io/neworgyangcao/go-app-0502:0e379d621e6c64d0a6870c0fdaac4d5ab2a5a6e3@sha256:5fa5a37eae3623ea8929325fffb4af02b8934847596afca7e880e6651a75766c

--- a/components/go-app-0502/overlays/development/deployment-patch.yaml
+++ b/components/go-app-0502/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-app-0502
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/neworgyangcao/go-app-0502:0e379d621e6c64d0a6870c0fdaac4d5ab2a5a6e3@sha256:5fa5a37eae3623ea8929325fffb4af02b8934847596afca7e880e6651a75766c
+          name: container-image
